change in image size

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 						<header class="major">
 							<h2>Hey There! I am a Software Engineer at Microsoft
 							</h2>
-							<span class="features-row"><span class="image fit"><img src="images/snip.jpg" alt="" /></span></span>
-							<h3>Currently I am working with the Data and Insights Team of Microsoft Enterprise Services Business, building key data analytical platforms that grow and optimize Microsoft Business Solutions.</h3>
+							<span class="features-row" ><span class="image fit" ><img src="images/snip.jpg" alt="" /></span></span>
+							<h3>Currently I am working with the Data and Insights Team of Microsoft Enterprise Services Business in Corporate Functions Engineering (CFE) Organization. I build key data analytical platforms that grow and optimize Microsoft Business Solutions.</h3>
 						</header>
 						
 					</section>
