adding project components

--- a/index.html
+++ b/index.html
@@ -76,11 +76,31 @@
 							<section>
 								<h3>Cooking</h3>
 								<span class="icon solid major fa-utensil-spoon accent2"></span>
+								<h4> Started Cooking at age of 12 and after ruining hundreds of dishes past these years, I am now able to share my favourite creations and a few ancestral recipes with you all.</br><a href="https://www.instagram.com/mumsessence/" target="_blank">Know More</a></h4>
 							</section>
 							<section>
 								<h3>Travelling</h3>
 								<span class="icon solid major fa-mountain accent3"></span>
-								
+								<h4>Skylines and sunsets hold a special place in my heart. I love to travel to uncommercialized beaches and mountains and spend time reading a book or just enjoy the sun and the water</h4>
+							</section>
+						</div>
+						</section>
+					</section>
+				</section>
+				<section class="box special">
+						<header class="major">
+							<h2>Projects and Research</h2>
+						</header>
+						<section class="box special features">
+						<div class="features-row">
+							<section>
+								<h3><a href="https://link.springer.com/article/10.1007/s11277-019-06734-y" target="_blank">Predicting Spam Messages Using Back Propagation Neural Networks</a></h3>
+								<h4>Authors: A. Jain, S. Agarwal, D. Goel, Y. Singh, G. Bajaj</h4>
+							</section>
+							<section>
+								<h3><a href="https://github.com/sanjliagarwal/codeguide" target="_blank">Codeguide</a></h3>
+								<h5>built in 2017 during a software development competition at NIT Kurukshetra</h5>
+								<h4>A platform to practice competitive coding trained according to your performance</h4>
 							</section>
 						</div>
 						</section>
