changing link to resume

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 				<section id="banner">
 					<h2>Sanjli Agarwal</h2>
 					<ul class="actions special">
-						<li><a href="https://drive.google.com/file/d/1ulk7NWeBkQ3QF8hT6HeT7tPSYSqsjIg1/view" class="button primary" target="_blank"> Resume</a></li>
+						<li><a href="https://drive.google.com/file/d/1N1VgUEoin6sQ3HMqk8-cPdE_niA9504q/view" class="button primary" target="_blank"> Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/sanjli-agarwal-78ba15ba/" class="button primary" target="_blank"> LinkedIn</a ></li>
-						<li><a href="mailto:sanjliagarwal@gail.com" class="button primary"> Contact</a></li>
+						<li><a href="mailto:sanjliagarwal@gmail.com" class="button primary"> Contact</a></li>
 					</ul>
 				</section>
 
