--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 				<section id="banner">
 					<h2>Sanjli Agarwal</h2>
 					<ul class="actions special">
-						<li><a href="https://drive.google.com/file/d/1N1VgUEoin6sQ3HMqk8-cPdE_niA9504q/view" class="button primary" target="_blank"> Resume</a></li>
+						<li><a href="https://drive.google.com/file/d/1VYfBY-tr7848rLbPWLSXBMu95U7goTzO/view" class="button primary" target="_blank"> Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/sanjli-agarwal-78ba15ba/" class="button primary" target="_blank"> LinkedIn</a ></li>
-						<li><a href="mailto:sanjliagarwal@gmail.com" class="button primary"> Contact</a></li>
+						<li><a href="mailto:sanjli_agarwal@berkeley.edu" class="button primary"> Contact</a></li>
 					</ul>
 				</section>
 
@@ -24,14 +24,35 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Hey There! I am a Software Engineer at Microsoft
+							<h2>Hey There! I am a computer science engineer. I am a data enthusiast. I am a student. I am impact driven and customer obsessed.
 							</h2>
 							<span class="features-row" ><span class="image fit" ><img src="images/snip.jpg" alt="" /></span></span>
-							<h3>Currently I am working with the Data and Insights Team of Microsoft Enterprise Services Business in Corporate Functions Engineering (CFE) Organization. I build key data analytical platforms that grow and optimize Microsoft Business Solutions.</h3>
+							<h3>As a data science masters student at UC Berkeley, I am enhancing my academic and professional skills to complement my 3 years of  software engineering and big data experience. Before cooming to Berkeley, I worked as a software engineer with Microsoft for 3 years where I built key data analytical platforms that grow and optimize Microsoft Business Solutions.</h3>
 						</header>
 						
 					</section>
-					
+					<section class="box special">
+						<header class="major">
+							<h2>Academic and Professional Interests</h2>
+						</header>
+						<section class="box special features">
+						<div class="features-row">
+							<section>
+								<h3>Software Engineering</h3>
+							</section>
+							<section>
+								<h3>Algorithms and Data Structures</h3>
+							</section>
+							<section>
+								<h3>Data Analytics Applications</h3>
+							</section>
+							<section>	
+							 	<h3>Machine Learning</h3>
+							</section>
+						</div>
+						</section>
+					</section>
+				</section>
 					<section class="box special">
 						<header class="major">
 							<h2>Skills
